# ps5-payloads-mirror

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  WEBUI.md  add_payload.py  docker-compose.yml  mirror_core.py  payloads.json  pyproject.toml  start.sh  update_payloads.py
.github/workflows/: update_mirror.yml
openspec/changes/archive/2026-07-15-add-mirror-editing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-15-add-mirror-reorder-and-hide/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-api-baseline/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-16-duplicated-sources/: design.md  proposal.md  tasks.md
openspec/specs/api-authentication/: spec.md
openspec/specs/asset-candidate-selection/: spec.md
openspec/specs/collection-title/: spec.md
openspec/specs/frontend-base/: spec.md
openspec/specs/git-publish/: spec.md
openspec/specs/mirror-editing/: spec.md
openspec/specs/mirror-management-api/: spec.md
openspec/specs/mirror-reordering/: spec.md
openspec/specs/mirror-visibility/: spec.md
openspec/specs/update-scheduler/: spec.md
server/: auto_publish.py  git_ops.py  main.py  scheduler.py
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts  useTheme.ts
web/src/components/: AddMirrorForm.tsx  CandidatePicker.tsx  EditMirrorDialog.tsx  PayloadRow.tsx  PayloadTable.tsx  SchedulerPanel.tsx  Toast.tsx  icons.tsx
(+20 files in other folders)
